--- a/scripts/amrfinder/curate_amrfinder_results.html
+++ b/scripts/amrfinder/curate_amrfinder_results.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>curate_amrfinder_results</title>
 
@@ -352,11 +352,12 @@ display: none;
 
 <h1 class="title toc-ignore">curate_amrfinder_results</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
+<pre><code>[1] &quot;Number of final isolates that were ESCRE and QC passing: 170&quot;</code></pre>
 <div id="create_master_amrfinder_script" class="section level1">
 <h1>create_master_amrfinder_script</h1>
 <pre><code>MERLIN_1_amrfinder.out
