--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
-<title>curate_final_index_metadata</title>
+<title>Curate final metadataset of specimens from index subjects</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,9 +350,10 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">curate_final_index_metadata</h1>
+<h1 class="title toc-ignore">Curate final metadataset of specimens from
+index subjects</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
@@ -360,7 +361,7 @@ display: none;
 <div id="environment" class="section level1">
 <h1>Environment</h1>
 <pre class="r"><code>df &lt;- readRDS(&quot;/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS&quot;)
-df_qc_passing &lt;-  df %&gt;% subset(qc_pass==&quot;TRUE&quot; &amp; escre==T)
+df_qc_passing &lt;-  df %&gt;% subset(qc_pass==&quot;TRUE&quot; &amp; WGS_escre==T)
 df_index &lt;- subset(df_qc_passing, index==TRUE)</code></pre>
 </div>
 <div id="save" class="section level1">
