--- a/scripts/figures/figure_2_prolonged_colonization.html
+++ b/scripts/figures/figure_2_prolonged_colonization.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>figure_2</title>
 
@@ -576,11 +576,14 @@ display: none;
 
 <h1 class="title toc-ignore">figure_2</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
+<div id="environment" class="section level1">
+<h1>Environment</h1>
+</div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
