--- a/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>Results Section 4: Agreement between species-level and higher-resolution molecular evaluations of prolonged colonization</title>
 
@@ -354,13 +354,13 @@ display: none;
 species-level and higher-resolution molecular evaluations of prolonged
 colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
 <div id="for-statistics-see-figure-3" class="section level1">
-<h1>For statistics, see figure 3</h1>
+<h1>For statistics, see figure 3!</h1>
 </div>
 
 
