--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.html
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>s_table_1_plasmidic_location</title>
 
@@ -576,11 +576,19 @@ display: none;
 
 <h1 class="title toc-ignore">s_table_1_plasmidic_location</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
+<div id="environment" class="section level1">
+<h1>Environment</h1>
+</div>
+<div id="data" class="section level1">
+<h1>Data</h1>
+</div>
+<div id="esbl-gene-frequency-on-plasmids" class="section level1">
+<h1>ESBL gene frequency on plasmids</h1>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
 <thead>
 <tr>
@@ -811,6 +819,7 @@ blaTEM-1
 </tr>
 </tbody>
 </table>
+</div>
 
 
 
