--- a/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
+++ b/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-27" />
+<meta name="date" content="2025-05-28" />
 
 <title>Supplemental Table 2: Strain and ESBL gene presence stratified by household</title>
 
@@ -577,11 +577,17 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 2: Strain and ESBL gene
 presence stratified by household</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-27</h4>
+<h4 class="date">2025-05-28</h4>
 
 </div>
 
 
+<div id="environment" class="section level1">
+<h1>Environment</h1>
+</div>
+<div id="data" class="section level1">
+<h1>Data</h1>
+</div>
 <div id="supplemental-table-2" class="section level1">
 <h1>Supplemental Table 2</h1>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
