update scripts to curate data to not modify identifier variables for PENN

--- a/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.html
@@ -360,7 +360,7 @@ colonization</h1>
 
 
 <div id="for-statistics-see-figure-3" class="section level1">
-<h1>For statistics, see figure 3!</h1>
+<h1>For statistics, see figure 3!!</h1>
 </div>
 
 
