--- a/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data.html
+++ b/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data.html
@@ -584,12 +584,77 @@ data for each isolate</h1>
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;,&#39;kableExtra&#39;) 
+
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>                                                                                            sysname 
+                                                                                           &quot;Darwin&quot; 
+                                                                                            release 
+                                                                                           &quot;24.5.0&quot; 
+                                                                                            version 
+&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+                                                                                           nodename 
+                                                                                   &quot;msla0572.local&quot; 
+                                                                                            machine 
+                                                                                           &quot;x86_64&quot; 
+                                                                                              login 
+                                                                                             &quot;root&quot; 
+                                                                                               user 
+                                                                                         &quot;kgontjes&quot; 
+                                                                                     effective_user 
+                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>R version 4.5.0 (2025-04-11)
+Platform: x86_64-apple-darwin20
+Running under: macOS Sequoia 15.5
+
+Matrix products: default
+BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+time zone: America/Detroit
+tzcode source: internal
+
+attached base packages:
+[1] stats     graphics  grDevices utils     datasets  methods   base     
+
+other attached packages:
+ [1] kableExtra_1.4.0 lubridate_1.9.4  forcats_1.0.0    stringr_1.5.1   
+ [5] dplyr_1.1.4      purrr_1.0.4      readr_2.1.5      tidyr_1.3.1     
+ [9] tibble_3.2.1     ggplot2_3.5.2    tidyverse_2.0.0  knitr_1.50      
+
+loaded via a namespace (and not attached):
+ [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
+ [5] xml2_1.3.8         jquerylib_0.1.4    systemfonts_1.2.2  scales_1.4.0      
+ [9] yaml_2.3.10        fastmap_1.2.0      R6_2.6.1           generics_0.1.4    
+[13] svglite_2.1.3      bslib_0.9.0        pillar_1.10.2      RColorBrewer_1.1-3
+[17] tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0       stringi_1.8.7     
+[21] xfun_0.52          sass_0.4.10        viridisLite_0.4.2  timechange_0.3.0  
+[25] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
+[29] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+[33] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
+[37] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
+</div>
+<div id="load-data" class="section level1">
+<h1>Load data</h1>
 <pre class="r"><code>df &lt;- readRDS(&quot;./data/dataset/MERLIN_cohort_metadata_final.RDS&quot;) %&gt;% subset(qc_pass == &quot;TRUE&quot; &amp; WGS_escre == TRUE)
 amrfinder_mat &lt;- readRDS(&quot;./data/amrfinder/amrfinder_matrix.RDS&quot;) %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select_if(colSums(.)&gt;0)
 amrfinder &lt;- readRDS(&quot;./data/amrfinder/amrfinder_cleaned.RDS&quot;)  %&gt;% subset(element_symbol %in% colnames(amrfinder_mat))
 mobsuite_gene_pres &lt;- readRDS(&quot;./data/ESBL_plasmids/amrfinder_mobsuite_gene_presence.RDS&quot;) %&gt;% subset(genomic_id %in% df$genomic_id) 
 ESBL_plasmid_clusters &lt;- readRDS(&quot;./data/ESBL_plasmids/amrfinder_ESBL_contig_matrix.RDS&quot;) %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select_if(colSums(.)&gt;0)</code></pre>
 <pre class="r"><code>df &lt;- left_join(df,amrfinder_mat %&gt;% mutate(genomic_id = rownames(.))) %&gt;% left_join(ESBL_plasmid_clusters %&gt;% mutate(genomic_id=rownames(.)))</code></pre>
+</div>
+<div id="get-bla-and-esbl-genes" class="section level1">
+<h1>Get BLA and ESBL genes</h1>
 <pre class="r"><code>amrfinder_blactam &lt;- amrfinder %&gt;% subset(class == &quot;BETA-LACTAM&quot;)
 bla_genes &lt;- amrfinder_blactam$element_symbol%&gt;% unique %&gt;% sort
 paste0(&quot;Number of beta-lactamase genes identified: &quot; , length(amrfinder_blactam$element_symbol %&gt;% unique))</code></pre>
@@ -635,6 +700,9 @@ paste0(&quot;Number of beta-lactamase genes identified: &quot; , length(amrfinde
   blaTEM-214            1          0                         0             0</code></pre>
 <pre class="r"><code>amrfinder_ESBL &lt;- amrfinder %&gt;% subset(grepl(&quot;CTX|OXA|TEM|SHV|PER|VEB|GES|TLA|BES&quot;,element_symbol))
 ESBL_genes &lt;- amrfinder_ESBL$element_symbol %&gt;% unique %&gt;% sort</code></pre>
+</div>
+<div id="get-bla-and-esbl-data-on-plasmids-and-chromosome" class="section level1">
+<h1>Get BLA and ESBL data on plasmids and chromosome</h1>
 <pre class="r"><code>get_ESBL_data &lt;- function(isolate,mobsuite_gene_pres,bla_genes,ESBL_genes){
   mobsuite_df &lt;- subset(mobsuite_gene_pres,genomic_id == isolate)
   plasmids_str &lt;- mobsuite_df$type %&gt;% subset(. != &#39;chromosome&#39;)  %&gt;% paste0(collapse=&#39;;&#39;)  %&gt;% {ifelse(is_empty(.)==T,&quot;&quot;,.)}  
