--- a/scripts/dataset_curation/MERLIN_add_qc_to_deduplicated_metadata.html
+++ b/scripts/dataset_curation/MERLIN_add_qc_to_deduplicated_metadata.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-05-28" />
 
-<title>MERLIN_merge_metadata_w_qcd</title>
+<title>Data Cleaning Step 5- Add QCD data to de-duplicated metadata</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,26 +350,79 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">MERLIN_merge_metadata_w_qcd</h1>
+<h1 class="title toc-ignore">Data Cleaning Step 5- Add QCD data to
+de-duplicated metadata</h1>
 <h4 class="author">Kyle Gontjes</h4>
 <h4 class="date">2025-05-28</h4>
 
 </div>
 
 
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.4     ✔ readr     2.1.5
-## ✔ forcats   1.0.0     ✔ stringr   1.5.1
-## ✔ ggplot2   3.5.2     ✔ tibble    3.2.1
-## ✔ lubridate 1.9.4     ✔ tidyr     1.3.1
-## ✔ purrr     1.0.4     
-## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
-## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
+<div id="environment" class="section level1">
+<h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;)   
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>##                                                                                             sysname 
+##                                                                                            &quot;Darwin&quot; 
+##                                                                                             release 
+##                                                                                            &quot;24.5.0&quot; 
+##                                                                                             version 
+## &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+##                                                                                            nodename 
+##                                                                                    &quot;msla0572.local&quot; 
+##                                                                                             machine 
+##                                                                                            &quot;x86_64&quot; 
+##                                                                                               login 
+##                                                                                              &quot;root&quot; 
+##                                                                                                user 
+##                                                                                          &quot;kgontjes&quot; 
+##                                                                                      effective_user 
+##                                                                                          &quot;kgontjes&quot;</code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>## R version 4.5.0 (2025-04-11)
+## Platform: x86_64-apple-darwin20
+## Running under: macOS Sequoia 15.5
+## 
+## Matrix products: default
+## BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+## LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+## 
+## locale:
+## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+## 
+## time zone: America/Detroit
+## tzcode source: internal
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## other attached packages:
+##  [1] lubridate_1.9.4 forcats_1.0.0   stringr_1.5.1   dplyr_1.1.4    
+##  [5] purrr_1.0.4     readr_2.1.5     tidyr_1.3.1     tibble_3.2.1   
+##  [9] ggplot2_3.5.2   tidyverse_2.0.0 knitr_1.50     
+## 
+## loaded via a namespace (and not attached):
+##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
+##  [5] jquerylib_0.1.4    scales_1.4.0       yaml_2.3.10        fastmap_1.2.0     
+##  [9] R6_2.6.1           generics_0.1.4     bslib_0.9.0        pillar_1.10.2     
+## [13] RColorBrewer_1.1-3 tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0      
+## [17] stringi_1.8.7      xfun_0.52          sass_0.4.10        timechange_0.3.0  
+## [21] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
+## [25] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+## [29] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
+## [33] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1</code></pre>
+</div>
+<div id="load-data" class="section level1">
+<h1>Load data</h1>
 <pre class="r"><code>metadata &lt;- readRDS(&quot;./MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed.RDS&quot;) 
 qcd &lt;- readRDS(&quot;./MERLIN-prolonged-colonization-ms/data/QCD/master_qc_all.RDS&quot;)</code></pre>
+</div>
 <div id="merge-qcd-data" class="section level1">
 <h1>Merge qcd data</h1>
 <pre class="r"><code>merge_qcd_data &lt;- function(WGS_id, QC_flag){
@@ -399,16 +452,16 @@ metadata &lt;- left_join(metadata, qcd_results)</code></pre>
 <pre class="r"><code>metadata$household &lt;- ifelse(grepl(&quot;MER&quot;,metadata$household_number_recode), metadata$isolate_id,metadata$household_number_recode) %&gt;% gsub(&quot;h&quot;,&quot;H&quot;,.)
 metadata$ST &lt;- ifelse(metadata$ST ==&quot;-&quot;,&quot;Unknown&quot;,metadata$ST) 
 metadata$Species_ST &lt;- paste0(metadata$Species,&quot; ST &quot;,metadata$ST) %&gt;% trimws(.,&quot;both&quot;)
-metadata$specimen &lt;- ifelse(grepl(&quot;MER&quot;,metadata$household_number_recode),&quot;Stool 1A&quot;,metadata$isolate_id)%&gt;% gsub(&quot;C1|C2|C3&quot;,&quot;&quot;,.)  %&gt;% trimws(.,&quot;both&quot;)  %&gt;% gsub(&quot;\\)|pink|00784|01240|01238|00794|00792|\\(&quot;,&quot;&quot;,.) %&gt;% trimws(.,&quot;both&quot;)  %&gt;% gsub(&quot;Petnape&quot;,&quot;Pet Nape&quot;,.)%&gt;% trimws(.,&quot;both&quot;) %&gt;% gsub(&quot;Petstool&quot;,&quot;Pet Stool&quot;,.) %&gt;% trimws(.,&quot;both&quot;)
+metadata$specimen &lt;- ifelse(grepl(&quot;MER&quot;,metadata$household_number_recode),&quot;Stool 1A&quot;,metadata$isolate_id)%&gt;% gsub(&quot;C1|C2|C3&quot;,&quot;&quot;,.)  %&gt;% trimws(.,&quot;both&quot;)  %&gt;% gsub(&quot;\\)|pink|00784|01240|01238|00794|00792|\\(&quot;,&quot;&quot;,.) %&gt;% trimws(.,&quot;both&quot;)  %&gt;% gsub(&quot;Petnape&quot;,&quot;Pet Nape&quot;,.) %&gt;% trimws(.,&quot;both&quot;) %&gt;% gsub(&quot;Petstool&quot;,&quot;Pet Stool&quot;,.) %&gt;% trimws(.,&quot;both&quot;)
 
-metadata$specimen_category &lt;- ifelse(metadata$specimen %in% c(&quot;Bath 1&quot;,&quot;Kitchen&quot;,&quot;Living Room&quot;,&quot;Washing Machine&quot;),&quot;Environmnent&quot;,
+metadata$specimen_category &lt;- ifelse(metadata$specimen %in% c(&quot;Bath 1&quot;,&quot;Bath 2&quot;,&quot;Kitchen&quot;,&quot;Living Room&quot;,&quot;Washing Machine&quot;),&quot;Environmnent&quot;,
                                            ifelse(metadata$specimen %in% c(&quot;Pet Nape 1A&quot;,&quot;Pet Nape 2A&quot;,&quot;Pet Nape 3A&quot;,&quot;Pet Stool 1A&quot;,&quot;Pet Stool 2A&quot;),&quot;Pet&quot;,
-                                                  ifelse(metadata$specimen %in% c(&quot;Stool 1A&quot;,&quot;Stool 2A&quot;,&quot;Stool 3A&quot;),&quot;Human&quot;,&quot;Unk&quot;)))
+                                                  ifelse(metadata$specimen %in% c(&quot;Stool 1A&quot;,&quot;Stool 2A&quot;,&quot;Stool 3A&quot;),&quot;Human&quot;,&quot;Unknown&quot;)))
 
 metadata$individual_id &lt;- paste0(metadata$household,&quot;_&quot;,metadata$specimen)
 metadata$index &lt;-  grepl(&#39;hi&#39;,metadata$location_or_participant) | grepl(&quot;MER&quot;,metadata$household_number_recode)
 metadata$isolate_name &lt;- paste0(metadata$household,&quot;_&quot;,metadata$visit,&quot;_&quot;,metadata$specimen)</code></pre>
-<pre class="r"><code>metadata_clean &lt;- metadata %&gt;% select(-row,-column,-no_correct_platemap,-WGS_qc_pass_runs_num,-WGS_qc_pass_ids_num)
+<pre class="r"><code>metadata_clean &lt;- metadata %&gt;% select(-no_correct_platemap,-WGS_qc_pass_runs_num,-WGS_qc_pass_ids_num)
 colnames(metadata_clean) &lt;- gsub(&quot;\\.|\\.\\.\\.&quot;,&quot;_&quot;,colnames(metadata_clean))
 
 saveRDS(metadata_clean,&#39;./MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS&#39;)
