--- a/scripts/dataset_curation/MERLIN_remove_duplicates.html
+++ b/scripts/dataset_curation/MERLIN_remove_duplicates.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-05-28" />
 
-<title>MERLIN REMOVE DUPLICATES</title>
+<title>Data Cleaning Step 4- Remove duplicates</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -574,7 +574,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">MERLIN REMOVE DUPLICATES</h1>
+<h1 class="title toc-ignore">Data Cleaning Step 4- Remove
+duplicates</h1>
 <h4 class="author">Kyle Gontjes</h4>
 <h4 class="date">2025-05-28</h4>
 
@@ -583,6 +584,66 @@ display: none;
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;,&#39;ape&#39;,&#39;kableExtra&#39;)   
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>##                                                                                             sysname 
+##                                                                                            &quot;Darwin&quot; 
+##                                                                                             release 
+##                                                                                            &quot;24.5.0&quot; 
+##                                                                                             version 
+## &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+##                                                                                            nodename 
+##                                                                                    &quot;msla0572.local&quot; 
+##                                                                                             machine 
+##                                                                                            &quot;x86_64&quot; 
+##                                                                                               login 
+##                                                                                              &quot;root&quot; 
+##                                                                                                user 
+##                                                                                          &quot;kgontjes&quot; 
+##                                                                                      effective_user 
+##                                                                                          &quot;kgontjes&quot;</code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>## R version 4.5.0 (2025-04-11)
+## Platform: x86_64-apple-darwin20
+## Running under: macOS Sequoia 15.5
+## 
+## Matrix products: default
+## BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+## LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+## 
+## locale:
+## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+## 
+## time zone: America/Detroit
+## tzcode source: internal
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## other attached packages:
+##  [1] kableExtra_1.4.0 ape_5.8-1        lubridate_1.9.4  forcats_1.0.0   
+##  [5] stringr_1.5.1    dplyr_1.1.4      purrr_1.0.4      readr_2.1.5     
+##  [9] tidyr_1.3.1      tibble_3.2.1     ggplot2_3.5.2    tidyverse_2.0.0 
+## [13] knitr_1.50      
+## 
+## loaded via a namespace (and not attached):
+##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     Rcpp_1.0.14       
+##  [5] tidyselect_1.2.1   xml2_1.3.8         parallel_4.5.0     jquerylib_0.1.4   
+##  [9] systemfonts_1.2.2  scales_1.4.0       yaml_2.3.10        fastmap_1.2.0     
+## [13] lattice_0.22-7     R6_2.6.1           generics_0.1.4     svglite_2.1.3     
+## [17] bslib_0.9.0        pillar_1.10.2      RColorBrewer_1.1-3 tzdb_0.5.0        
+## [21] rlang_1.1.6        cachem_1.1.0       stringi_1.8.7      xfun_0.52         
+## [25] sass_0.4.10        viridisLite_0.4.2  timechange_0.3.0   cli_3.6.5         
+## [29] withr_3.0.2        magrittr_2.0.3     digest_0.6.37      grid_4.5.0        
+## [33] rstudioapi_0.17.1  hms_1.1.3          nlme_3.1-168       lifecycle_1.0.4   
+## [37] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
+## [41] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1</code></pre>
 </div>
 <div id="load-metadata" class="section level1">
 <h1>Load metadata</h1>
@@ -618,7 +679,7 @@ metadata$genomic_id &lt;- metadata$genomic_id_qc_pass_escre</code></pre>
 ##   0   1   2   3 
 ##  93 154  15   1</code></pre>
 <pre class="r"><code>metadata_duplicates &lt;- subset(metadata,genomic_id_qc_pass_escre_num &gt; 1)
-paste0(&quot;Number of duplicates: &quot;,nrow(metadata_duplicates))</code></pre>
+paste0(&quot;Number of duplicates: &quot;, nrow(metadata_duplicates))</code></pre>
 <pre><code>## [1] &quot;Number of duplicates: 16&quot;</code></pre>
 </div>
 <div id="distance-data" class="section level1">
