--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-05-28" />
 
-<title>Curate final metadataset of specimens from index subjects</title>
+<title>Data Cleaning Step 7- Curate final metadataset of specimens from index subjects</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,8 +350,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Curate final metadataset of specimens from
-index subjects</h1>
+<h1 class="title toc-ignore">Data Cleaning Step 7- Curate final
+metadataset of specimens from index subjects</h1>
 <h4 class="author">Kyle Gontjes</h4>
 <h4 class="date">2025-05-28</h4>
 
@@ -360,8 +360,66 @@ index subjects</h1>
 
 <div id="environment" class="section level1">
 <h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;) 
+
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>                                                                                            sysname 
+                                                                                           &quot;Darwin&quot; 
+                                                                                            release 
+                                                                                           &quot;24.5.0&quot; 
+                                                                                            version 
+&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+                                                                                           nodename 
+                                                                                   &quot;msla0572.local&quot; 
+                                                                                            machine 
+                                                                                           &quot;x86_64&quot; 
+                                                                                              login 
+                                                                                             &quot;root&quot; 
+                                                                                               user 
+                                                                                         &quot;kgontjes&quot; 
+                                                                                     effective_user 
+                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>R version 4.5.0 (2025-04-11)
+Platform: x86_64-apple-darwin20
+Running under: macOS Sequoia 15.5
+
+Matrix products: default
+BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+time zone: America/Detroit
+tzcode source: internal
+
+attached base packages:
+[1] stats     graphics  grDevices utils     datasets  methods   base     
+
+other attached packages:
+ [1] lubridate_1.9.4 forcats_1.0.0   stringr_1.5.1   dplyr_1.1.4    
+ [5] purrr_1.0.4     readr_2.1.5     tidyr_1.3.1     tibble_3.2.1   
+ [9] ggplot2_3.5.2   tidyverse_2.0.0 knitr_1.50     
+
+loaded via a namespace (and not attached):
+ [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
+ [5] jquerylib_0.1.4    scales_1.4.0       yaml_2.3.10        fastmap_1.2.0     
+ [9] R6_2.6.1           generics_0.1.4     bslib_0.9.0        pillar_1.10.2     
+[13] RColorBrewer_1.1-3 tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0      
+[17] stringi_1.8.7      xfun_0.52          sass_0.4.10        timechange_0.3.0  
+[21] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
+[25] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+[29] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
+[33] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
 <pre class="r"><code>df &lt;- readRDS(&quot;/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS&quot;)
-df_qc_passing &lt;-  df %&gt;% subset(qc_pass==&quot;TRUE&quot; &amp; WGS_escre==T)
+df_qc_passing &lt;-  df %&gt;% subset(qc_pass==&quot;TRUE&quot; &amp; WGS_escre==TRUE)
 df_index &lt;- subset(df_qc_passing, index==TRUE)</code></pre>
 </div>
 <div id="save" class="section level1">
