--- a/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
+++ b/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
@@ -357,6 +357,93 @@ display: none;
 </div>
 
 
+<div id="environment" class="section level1">
+<h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;,&#39;ape&#39;,&#39;kableExtra&#39;,&#39;phytools&#39;,&#39;igraph&#39;,&#39;ggraph&#39;,&#39;tableone&#39;,&#39;kableExtra&#39;,&#39;ComplexHeatmap&#39;,&#39;gontjesr&#39;) 
+
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>                                                                                            sysname 
+                                                                                           &quot;Darwin&quot; 
+                                                                                            release 
+                                                                                           &quot;24.5.0&quot; 
+                                                                                            version 
+&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+                                                                                           nodename 
+                                                                                   &quot;msla0572.local&quot; 
+                                                                                            machine 
+                                                                                           &quot;x86_64&quot; 
+                                                                                              login 
+                                                                                             &quot;root&quot; 
+                                                                                               user 
+                                                                                         &quot;kgontjes&quot; 
+                                                                                     effective_user 
+                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>R version 4.5.0 (2025-04-11)
+Platform: x86_64-apple-darwin20
+Running under: macOS Sequoia 15.5
+
+Matrix products: default
+BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+time zone: America/Detroit
+tzcode source: internal
+
+attached base packages:
+[1] grid      stats     graphics  grDevices utils     datasets  methods  
+[8] base     
+
+other attached packages:
+ [1] gontjesr_0.1.0        ComplexHeatmap_2.24.0 tableone_0.13.2      
+ [4] ggraph_2.2.1          igraph_2.1.4          phytools_2.4-4       
+ [7] maps_3.4.2.1          kableExtra_1.4.0      ape_5.8-1            
+[10] lubridate_1.9.4       forcats_1.0.0         stringr_1.5.1        
+[13] dplyr_1.1.4           purrr_1.0.4           readr_2.1.5          
+[16] tidyr_1.3.1           tibble_3.2.1          ggplot2_3.5.2        
+[19] tidyverse_2.0.0       knitr_1.50           
+
+loaded via a namespace (and not attached):
+ [1] DBI_1.2.3               mnormt_2.1.1            gridExtra_2.3          
+ [4] phangorn_2.12.1         rlang_1.1.6             magrittr_2.0.3         
+ [7] clue_0.3-66             GetoptLong_1.0.5        matrixStats_1.5.0      
+[10] compiler_4.5.0          png_0.1-8               systemfonts_1.2.2      
+[13] vctrs_0.6.5             combinat_0.0-8          quadprog_1.5-8         
+[16] pkgconfig_2.0.3         shape_1.4.6.1           crayon_1.5.3           
+[19] fastmap_1.2.0           rmarkdown_2.29          tzdb_0.5.0             
+[22] xfun_0.52               cachem_1.1.0            clusterGeneration_1.3.8
+[25] jsonlite_2.0.0          tweenr_2.0.3            cluster_2.1.8.1        
+[28] parallel_4.5.0          R6_2.6.1                bslib_0.9.0            
+[31] stringi_1.8.7           RColorBrewer_1.1-3      jquerylib_0.1.4        
+[34] numDeriv_2016.8-1.1     Rcpp_1.0.14             iterators_1.0.14       
+[37] optimParallel_1.0-2     IRanges_2.42.0          Matrix_1.7-3           
+[40] splines_4.5.0           timechange_0.3.0        tidyselect_1.2.1       
+[43] rstudioapi_0.17.1       yaml_2.3.10             viridis_0.6.5          
+[46] doParallel_1.0.17       codetools_0.2-20        lattice_0.22-7         
+[49] withr_3.0.2             coda_0.19-4.1           evaluate_1.0.3         
+[52] survival_3.8-3          survey_4.4-2            polyclip_1.10-7        
+[55] xml2_1.3.8              circlize_0.4.16         pillar_1.10.2          
+[58] foreach_1.5.2           stats4_4.5.0            generics_0.1.4         
+[61] hms_1.1.3               S4Vectors_0.46.0        scales_1.4.0           
+[64] glue_1.8.0              scatterplot3d_0.3-44    tools_4.5.0            
+[67] graphlayouts_1.2.2      fastmatch_1.1-6         tidygraph_1.3.1        
+[70] mitools_2.4             colorspace_2.1-1        nlme_3.1-168           
+[73] ggforce_0.4.2           cli_3.6.5               DEoptim_2.2-8          
+[76] expm_1.0-0              viridisLite_0.4.2       svglite_2.1.3          
+[79] gtable_0.3.6            sass_0.4.10             digest_0.6.37          
+[82] BiocGenerics_0.54.0     ggrepel_0.9.6           rjson_0.2.23           
+[85] farver_2.1.2            memoise_2.0.1           htmltools_0.5.8.1      
+[88] lifecycle_1.0.4         GlobalOptions_0.1.2     MASS_7.3-65            </code></pre>
+</div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
 </div>
