--- a/scripts/results_sections/results_section_3_ESBL_sharing_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_3_ESBL_sharing_prolonged_colonization.html
@@ -358,6 +358,74 @@ provides additional support for prolonged colonization</h1>
 </div>
 
 
+<div id="environment" class="section level1">
+<h1>Environment</h1>
+<pre class="r"><code>#Packages
+packages &lt;- c(&quot;tidyverse&quot;,&#39;kableExtra&#39;,&#39;tableone&#39;,&#39;gontjesr&#39;)
+
+#Load Packages
+invisible(lapply(packages,library,character.only=T,quietly=T))
+
+# Source library
+source(&quot;./lib/consistent_themes.R&quot;)
+
+# Print environment
+set.seed(45) 
+Sys.info()</code></pre>
+<pre><code>                                                                                            sysname 
+                                                                                           &quot;Darwin&quot; 
+                                                                                            release 
+                                                                                           &quot;24.5.0&quot; 
+                                                                                            version 
+&quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
+                                                                                           nodename 
+                                                                                   &quot;msla0572.local&quot; 
+                                                                                            machine 
+                                                                                           &quot;x86_64&quot; 
+                                                                                              login 
+                                                                                             &quot;root&quot; 
+                                                                                               user 
+                                                                                         &quot;kgontjes&quot; 
+                                                                                     effective_user 
+                                                                                         &quot;kgontjes&quot; </code></pre>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>R version 4.5.0 (2025-04-11)
+Platform: x86_64-apple-darwin20
+Running under: macOS Sequoia 15.5
+
+Matrix products: default
+BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
+LAPACK: /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRlapack.dylib;  LAPACK version 3.12.1
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+time zone: America/Detroit
+tzcode source: internal
+
+attached base packages:
+[1] stats     graphics  grDevices utils     datasets  methods   base     
+
+other attached packages:
+ [1] gontjesr_0.1.0   tableone_0.13.2  kableExtra_1.4.0 lubridate_1.9.4 
+ [5] forcats_1.0.0    stringr_1.5.1    dplyr_1.1.4      purrr_1.0.4     
+ [9] readr_2.1.5      tidyr_1.3.1      tibble_3.2.1     ggplot2_3.5.2   
+[13] tidyverse_2.0.0  knitr_1.50      
+
+loaded via a namespace (and not attached):
+ [1] sass_0.4.10        generics_0.1.4     xml2_1.3.8         stringi_1.8.7     
+ [5] lattice_0.22-7     hms_1.1.3          digest_0.6.37      magrittr_2.0.3    
+ [9] evaluate_1.0.3     grid_4.5.0         timechange_0.3.0   RColorBrewer_1.1-3
+[13] fastmap_1.2.0      jsonlite_2.0.0     Matrix_1.7-3       DBI_1.2.3         
+[17] survival_3.8-3     viridisLite_0.4.2  scales_1.4.0       jquerylib_0.1.4   
+[21] cli_3.6.5          mitools_2.4        rlang_1.1.6        splines_4.5.0     
+[25] withr_3.0.2        cachem_1.1.0       yaml_2.3.10        tools_4.5.0       
+[29] tzdb_0.5.0         vctrs_0.6.5        R6_2.6.1           lifecycle_1.0.4   
+[33] pkgconfig_2.0.3    pillar_1.10.2      bslib_0.9.0        gtable_0.3.6      
+[37] Rcpp_1.0.14        glue_1.8.0         systemfonts_1.2.2  xfun_0.52         
+[41] tidyselect_1.2.1   rstudioapi_0.17.1  farver_2.1.2       htmltools_0.5.8.1 
+[45] survey_4.4-2       rmarkdown_2.29     svglite_2.1.3      compiler_4.5.0    </code></pre>
+</div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
 <pre><code>[1] &quot;Number of subjects with index specimens positive: 31&quot;</code></pre>
