--- a/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
+++ b/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-30" />
+<meta name="date" content="2025-07-01" />
 
 <title>Prolonged colonization</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-30</h4>
+<h4 class="date">2025-07-01</h4>
 
 </div>
 
@@ -375,7 +375,7 @@ Sys.info()</code></pre>
                                                                                             version 
 &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
                                                                                            nodename 
-                                                                                   &quot;msla0572.local&quot; 
+                                                                    &quot;macbookpro.wifi.med.umich.edu&quot; 
                                                                                             machine 
                                                                                            &quot;x86_64&quot; 
                                                                                               login 
@@ -436,7 +436,7 @@ loaded via a namespace (and not attached):
 <h1>Create merged datapoints</h1>
 </div>
 <div id="save" class="section level1">
-<h1>save</h1>
+<h1>Save</h1>
 </div>
 
 
