change results section 2 to 3 and reduce number of variables considered

--- a/scripts/results_sections/results_section_3_prolonged_colonization_data.html
+++ b/scripts/results_sections/results_section_3_prolonged_colonization_data.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-30" />
+<meta name="date" content="2025-07-01" />
 
 <title>Results Section 2: Discrimination of prolonged colonization using WGS</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 2: Discrimination of
 prolonged colonization using WGS</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-30</h4>
+<h4 class="date">2025-07-01</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                             version 
 &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
                                                                                            nodename 
-                                                                                   &quot;msla0572.local&quot; 
+                                                                    &quot;macbookpro.wifi.med.umich.edu&quot; 
                                                                                             machine 
                                                                                            &quot;x86_64&quot; 
                                                                                               login 
@@ -691,7 +691,7 @@ Species
 </tr>
 <tr>
 <td style="text-align:left;">
-Species + ST
+Sequence type
 </td>
 <td style="text-align:right;">
 17
@@ -702,7 +702,7 @@ Species + ST
 </tr>
 <tr>
 <td style="text-align:left;">
-Species + ST + Cluster (Strain)
+Strain
 </td>
 <td style="text-align:right;">
 16
@@ -716,48 +716,15 @@ Species + ST + Cluster (Strain)
 ESCrE gene
 </td>
 <td style="text-align:right;">
-20
+19
 </td>
 <td style="text-align:right;">
-0.6451613
+0.6129032
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Plasmidic ESCrE
-</td>
-<td style="text-align:right;">
-16
-</td>
-<td style="text-align:right;">
-0.5161290
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-ESCrE plasmid
-</td>
-<td style="text-align:right;">
-7
-</td>
-<td style="text-align:right;">
-0.2258065
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Strain +/- ESCrE
-</td>
-<td style="text-align:right;">
-20
-</td>
-<td style="text-align:right;">
-0.6451613
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Strain +/- plasmidic ESCrE
+Strain + ESCrE gene
 </td>
 <td style="text-align:right;">
 19
@@ -768,13 +735,13 @@ Strain +/- plasmidic ESCrE
 </tr>
 <tr>
 <td style="text-align:left;">
-Strain +/- ESCrE plasmid
+Strain + plasmid-linked ESCrE gene
 </td>
 <td style="text-align:right;">
-16
+18
 </td>
 <td style="text-align:right;">
-0.5161290
+0.5806452
 </td>
 </tr>
 </tbody>
